# KAIST_EE405A_2024_1

./: README.md
Week10/: ta.rviz
Week10/control_space_planner/: CMakeLists.txt  README.md  package.xml
Week10/control_space_planner/include/control_space_planner/: control_space_planner_node.hpp
Week10/control_space_planner/launch/: config.rviz  run.launch
Week10/control_space_planner/src/: control_space_planner_node.cpp
Week10/depthImage2pointCloud/: CMakeLists.txt  package.xml
Week10/depthImage2pointCloud/launch/: depth_image_projection.launch
Week10/depthImage2pointCloud/src/: pointcloud_projection.cpp
Week10/local_costmap_generator/src/: heightmap.cpp
Week10/nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch
Week12/chassis_control/msg/: SetTranslation.msg
Week12/llm/: CMakeLists.txt  package.xml
Week12/llm/api_key/: prompt.txt
Week12/messages/llm_msgs/: CMakeLists.txt  package.xml
Week12/messages/llm_msgs/msg/: task_plan.msg
Week12/messages/llm_msgs/srv/: CallImage.srv
Week12/pid_control/: CMakeLists.txt  package.xml
Week12/pid_control/include/: pid_control.h
Week12/pid_control/rviz/: pid_control.rviz
Week12/pid_control/src/: pid_control_node.cpp  pid_control_node_main.cpp
Week12/pid_control/wpt_data/: wpt_data_dense.csv
Week13/rover_tf_bringup/: CMakeLists.txt  package.xml
Week13/rover_tf_bringup/launch/: rover_tf_bringup.launch
Week14/local_costmap_generator/: CMakeLists.txt
Week14/local_costmap_generator/include/local_costmap_generator/: heightmap.h
Week14/local_costmap_generator/src/: heightmap.cpp  heightmap_to_costmap.cpp
Week14/manipulation/: CMakeLists.txt  package.xml
Week14/manipulation/scripts/: pick_and_place.py
Week2/practice/simple_position_viz/src/: simple_position_viz_node.cpp
Week2/simple_position_viz/: CMakeLists.txt  package.xml
Week2/simple_position_viz/launch/: simple_position_rviz.launch
Week2/simple_position_viz/rviz/: config.rviz
Week6/jetson_chassis_control/chassis_control/: CMakeLists.txt  package.xml
Week6/jetson_chassis_control/chassis_control/msg/: SetVelocity.msg
Week6/jetson_chassis_control/chassis_control/scripts/: chassis_control_node.py
Week6/jetson_chassis_control/twist_chassis_control/: CMakeLists.txt  package.xml
Week6/jetson_chassis_control/twist_chassis_control/include/twist_chassis_control/: twist_chassis_control.h
Week6/jetson_chassis_control/twist_chassis_control/src/: twist_chassis_control.cpp  twist_chassis_control_node.cpp
Week9/position_extimation/: CMakeLists.txt  README.md  package.xml
Week9/position_extimation/launch/: target_position_estimation.launch
Week9/position_extimation/src/: position_estimation.cpp  target_depth_image.cpp
Week9/target_object_position/: CMakeLists.txt  README.md  package.xml
Week9/target_object_position/src/: position_estimation.cpp  target_depth_image.cpp
llm/include/llm/: image_saver.h
llm/scripts/: gpt-4v.py
llm/src/: image_saver.cpp
