<?xml version="1.0"?>
<package format="2">
  <name>target_estimation</name>
  <version>0.0.0</version>
  <description>The target_estimation package</description>

  <maintainer email="fingb20@kaist.ac.kr">guri</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>point_tf</build_depend>
  <build_depend>detection_msgs</build_depend>
  <build_depend>point_tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>point_tf</build_export_depend>
  <build_export_depend>detection_msgs</build_export_depend>
  <build_export_depend>point_tf</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>point_tf</exec_depend>
  <exec_depend>detection_msgs</exec_depend>
  <exec_depend>point_tf</exec_depend>

  <export>
  </export>
</package>